--- a/package.json
+++ b/package.json
@@ -15,12 +15,13 @@
   "dependencies": {
     "@tailwindcss/cli": "^4.1.16",
     "concurrently": "^9.2.1",
+    "connect-mongo": "^5.1.0",
     "dotenv": "^17.2.3",
     "ejs": "^3.1.10",
     "express": "^5.1.0",
     "express-session": "^1.18.2",
+    "mongoose": "^8.19.3",
     "nodemon": "^3.1.10",
-    "session-file-store": "^1.5.0",
     "tailwindcss": "^4.1.16"
   }
 }
